addressed wrapping issue with about section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,7 +145,7 @@ nav a:focus::after {
 /* About Me Styling Start */
 
 .about-me {
-    height: 15em;
+    height: auto;
     border: .125em solid var(--primary-color);
     border-radius: 1em;
     top: 0;
